Fixed Bidform Solutions section on mobile

--- a/stylesheets/project.css
+++ b/stylesheets/project.css
@@ -526,6 +526,7 @@ td {
     margin: 1.5em 0;
 }
 
+/* Used for the Bidform Solutions Section */
 .grid-container {
     display: grid;
     /* grid-template-columns: auto auto auto;
@@ -537,7 +538,23 @@ td {
 .grid-container img {
     max-width: 280px;
     margin: 1em 0;
+    align-self: center;
 }
+.item7, .item8, .item9 { /* Descriptions for GIFs */
+    margin: 1em 0 3em 0;
+}
+
+.item1 {grid-area: 1 / 1 / 1 / 1}
+.item2 {grid-row-start: 4}
+.item3 {grid-row-start: 7}
+.item4 {grid-row-start: 2}
+.item5 {grid-row-start: 5}
+.item6 {grid-row-start: 8}
+.item7 {grid-row-start: 3}
+.item8 {grid-row-start: 6}
+.item9 {grid-row-start: 9}
+
+
 
 #end-container {
     margin: 8em 0 4em 0;
@@ -574,7 +591,7 @@ td {
 #explore-btn span img {
     position: relative;
     height: 100%;
-    width: 12%;
+    width: 22%;
 }
 
 #back-top-btn {
@@ -974,7 +991,6 @@ td {
     }
 
     .grid-container {
-        display: grid;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
         justify-content: space-between;
@@ -987,11 +1003,21 @@ td {
         line-height: 150%;
     }
     .grid-container img {
-        max-width: 370px;
+        /* max-width: 370px; */
         -webkit-box-shadow: 2px 2px 12px 2px rgba(120,120,120,0.75);
         -moz-box-shadow: 2px 2px 12px 2px rgba(120,120,120,0.75);
         box-shadow: 2px 2px 12px 2px rgba(120,120,120,0.75);
     }
+
+    .item1 {grid-area: 1 / 1 / 1 / 1}
+    .item2 {grid-area: 1 / 2 / 1 / 2}
+    .item3 {grid-area: 1 / 3 / 1 / 3}
+    .item4 {grid-area: 2 / 1 / 2 / 1}
+    .item5 {grid-area: 2 / 2 / 2 / 2}
+    .item6 {grid-area: 2 / 3 / 2 / 3}
+    .item7 {grid-area: 3 / 1 / 3 / 1}
+    .item8 {grid-area: 3 / 2 / 3 / 2}
+    .item9 {grid-area: 3 / 3 / 3 / 3}
 
     #end-container {
         margin-top: 12em;
@@ -1081,11 +1107,7 @@ td {
         margin-top: 10em;
     }
 
-    #back-index {
-        font-size: 26px;
-    }
-
-    #explore-btn {
+    #back-index, #explore-btn {
         font-size: 26px;
     }
 
